# sora-protocol

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs
crates/codecs/: Cargo.toml
crates/codecs/src/: json.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: async_transport.rs  codec.rs  command.rs  compression.rs  encryption.rs  error.rs  frame.rs  handshake.rs  lib.rs  registry.rs  transport.rs
crates/server/: Cargo.toml
crates/server/src/: core_commands.rs  dispatch.rs  lib.rs  session.rs
crates/transports/: Cargo.toml
crates/transports/src/: lib.rs  tcp.rs  tcp_async.rs  websocket.rs
