[package]
name = "sora-codecs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sora-protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }

serde_json = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json"]
msgpack = ["dep:rmp-serde"]
