[package]
name = "sora-transports"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sora-protocol = { path = "../protocol" }
thiserror = "2"
log = "0.4"

tungstenite = { version = "0.24", optional = true }
tokio = { version = "1", features = ["net", "io-util"], optional = true }

[features]
default = ["tcp", "websocket"]
tcp = []
tcp-async = ["dep:tokio"]
websocket = ["dep:tungstenite"]
